Added more fnl macros.

--- a/ihmacros.sty
+++ b/ihmacros.sty
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % 
 % ihmacros.sty - Ian Huston
-% $Id: ihmacros.sty,v 1.10 2009/08/26 17:41:44 ith Exp $
+% $Id: ihmacros.sty,v 1.11 2009/08/27 20:31:20 ith Exp $
 % % % % % % % % % % % % % % % % % 
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{ihmacros}
@@ -51,6 +51,8 @@
 % 
 % non-gaussianity
 \newcommand{\fnl}{\ensuremath{f_{\mathrm{NL}}}}
+\newcommand{\fnlloc}{\ensuremath{\fnl^\mathrm{loc}}}
+\newcommand{\fnleq}{\ensuremath{\fnl^{\mathrm{eq}}}}
 \newcommand{\nnl}{\ensuremath{n_{\mathrm{NL}}}}
 \newcommand{\tnl}{\tau_{\mathrm{NL}}}
 % 
@@ -84,7 +86,7 @@
 \newcommand{\com}{\mathsf{c}}
 \newcommand{\vect}[1]{\bm{\mathrm{{#1}}}}
 \newcommand{\matr}[1]{\bm{{#1}}}
-\renewcommand{\e}[1]{\mathrm{e}^{{#1}}}
+% \renewcommand{\e}[1]{\mathrm{e}^{{#1}}}
 \newcommand{\diracd}{\delta}
 \newcommand{\kronecker}{\bm{\mathrm{1}}}
 \newcommand{\imag}{\mathrm{i}}
