Added observations section.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.28 2009/08/27 18:00:33 ith Exp $
+% $Id: mainintro.tex,v 1.29 2009/08/27 20:31:27 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.28 2009/08/27 18:00:33 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.29 2009/08/27 20:31:27 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1062,7 +1062,7 @@ The consistency relation \eqref{eq:consistency-intro} is now defined as
 \cite{gm} 
 % 
 \begin{equation}
-\label{eq:rdefn-dbiintro}
+\label{`eq:rdefn-dbiintro}
   r = 16c_s \epsilon_H \,.
 \end{equation}
 
@@ -1130,18 +1130,72 @@ equilateral triangle becomes $-151 < \fnl < 253$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\begin{itemize}
- \item WMAP results
- \item Other ground based observations
- \item Current status of inflation in general and specific inflationary models
-\end{itemize}
+There has been a rapid rise in the quantity and quality of cosmological data
+sources in the last twenty years. From the launch of the COBE satellite in
+1989 \cite{Bennett1994, Bennett1996c}, through the currently
+ongoing WMAP mission \cite{spergel, Komatsu:2008hk}, to the recent launch of the
+Planck satellite \cite{planck}, space based observations have been at the
+forefront of this increase. Ground and balloon based missions including CBI
+\cite{Mason2003b, Sievers2003, Sievers2007}, VSA \cite{Dickinson2004}, ACBAR
+\cite{Kuo2004, Kuo2007} and BOOMERANG \cite{Ruhl2003, Montroy2006,
+Piacentini2006} have complemented these.
 
-The WMAP5 normalization of the CMB power spectrum 
-implies that $\Ps= 2.5\times10^{-9}$ and 
-the experimental upper bound on the tensor-scalar 
-ratio is $r <0.55$ \cite{Komatsu:2008hk}.
-\addtodo{Change to r<0.20 for no-running or r<0.54 for running (WMAP5+BAO+SN).
-Does this change any later calculations?}
+Major recent data releases have provided significant confirmation of the FRW
+model of the universe. The Hubble parameter today has been measured as $H_0 =
+72\pm8\,\mathrm{km}/\mathrm{s}/\Mpc$ by the Hubble Key Project
+\cite{Freedman2001}. In combination with this and data from Baryon
+Acoustic Oscillations in galaxy distributions (BAO) \cite{Percival2007}
+and supernova surveys (SN) by the Hubble Space Telescope \cite{Riess2004,
+Riess2007}, the SuperNova Legacy Survey \cite{Astier2006}, and ESSENCE
+\cite{Wood-Vasey2007}, the WMAP 5-Year data release (WMAP5) constrains the
+universe to be within two percent of the flat $\Omega =1, K=0$ case outlined in
+Section~\ref{sec:frw-intro}. 
+
+The amplitude of the scalar curvature perturbations $\Pr$ was first measured
+accurately by the COBE satellite \cite{Bennett1994, Bennett1996c}. The WMAP5
+normalization is taken at a different scale to the COBE result, measuring
+% 
+\begin{equation}
+ \label{eq:wmapnorm-intro}
+ \Pr(\kwmap) = 2.42 \e{-9}\,,
+\end{equation}
+% 
+where the pivot scale $\kwmap = 0.002\Mpc^{-1} \simeq 5.25\e{-60}\Mpl$. The
+spectral index of scalar perturbations for models with scalar-tensor ratio
+$r\ne0$ is given by the combined WMAP5+BAO+SN measurement as
+% 
+\begin{equation}
+ \label{eq:wmapns-intro}
+ n_s = 0.968 \pm 0.015\,,
+\end{equation}
+% 
+and the running in this case is bounded by
+% 
+\begin{equation}
+\label{eq:rbound-intro}
+ r < 0.54\,,
+\end{equation}
+at the 95\% confidence level.
+
+The current bounds on the non-gaussianity parameter are not strong but have
+been steadily tightening. The WMAP5 bound on the local form of $\fnl$ is
+% 
+\begin{equation}
+ -9<\fnlloc<111\,,
+\end{equation}
+% 
+and the bound on the equilateral form is
+% 
+\begin{equation}
+ -151<\fnleq<253\,,
+\end{equation}
+% 
+both at the 95\% confidence limit. 
+% Other groups have re-examined the WMAP data
+% and included previously absent parameter regions. 
+
+
+
 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
