*** empty log message ***

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Thesis - Ian Huston
-% $Id: thesis.tex,v 1.27 2009/08/16 11:40:39 ith Exp $
+% $Id: thesis.tex,v 1.28 2009/08/28 16:30:18 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[
  twoside,
@@ -8,8 +8,8 @@
 bibtotoc, % Include bibliography in contents
 liststotoc, % Include lists of figures and tables in contents
 idxtotoc, % Include index in contents
-onehalfspacing % onehalfspacing or doublespacing
-%doublespacing
+% onehalfspacing % onehalfspacing or doublespacing
+doublespacing
 %,openright
 ]
 {icldt}
@@ -26,7 +26,7 @@ onehalfspacing % onehalfspacing or doublespacing
             ]{ihformat}
 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.27 2009/08/16 11:40:39 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.28 2009/08/28 16:30:18 ith Exp $}
 % \usepackage[inline]{showlabels}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
@@ -70,7 +70,7 @@ theend
 %\listoftables
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-
+\onehalfspacing
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Main introduction
 \include{mainintro}
