Added introduction page.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.31 2009/08/30 10:59:30 ith Exp $
+% $Id: mainintro.tex,v 1.32 2009/08/30 14:42:11 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.31 2009/08/30 10:59:30 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.32 2009/08/30 14:42:11 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -13,16 +13,56 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\begin{itemize}
- \item General wordy introduction
- \item Inflation very successful
- \item Non-gaussianity as new tool
- \item Outline of intro chapter
-\end{itemize}
+In the past cosmology was a speculative science. The scarcity of observational
+data meant that many conflicting theories of the evolution of the universe were
+entertained with nothing but personal opinion to differentiate between them.
+The explosion in the quantity and quality of observational data in recent years
+has led to a much more competitive market place for ideas about the physical
+beginning of everything.
 
-% Hot big bang
-Evidence for the expansion of the universe, $H>0$, has been in place for many
-years and forms the basis of the Hot Big Bang scenario [cite reviews]. 
+The Big Bang scenario has emerged as a cohesive framework for the evolution of
+the universe from very early times. The observation of the Cosmic
+Microwave Background (CMB) confirmed the picture of a universe expanding even
+now from a hot dense singularity at the beginning \cite{book:kolbturner}.  This
+relic radiation emitted 300,000 years after the initial singularity continues to
+be our primary source of information about the early universe.
+
+The inflationary scenario is an attempt to solve problems with the standard Big
+Bang picture and provide an origin for the fluctuations in energy that seeded
+the growth of structure in the universe
+\cite{Starobinsky:1980te,Guth:1981,Albrecht:1982wi,Linde:1981mu,
+Starobinsky:1982ee}. These fluctuations link the classical scales of
+relativistic gravity with the quantum scales of Planck level physics. There are
+many possible realisations of inflation and there has been an explosion in the
+number of theoretical models which agree with current observational limits
+(for reviews see for example \cite{book:liddle, Alabidi:2008ej, Baumann2009}).
+
+Ground and spaced based observations have significantly challenged theoretical
+cosmological models with a wealth of new data. The Wilkinson Microwave
+Anisotropy Probe mission \cite{Komatsu:2008hk} in conjunction with supernova
+surveys and other evidence have shown that the fluctuations in
+temperature of the CMB are $10^{-5}$ times smaller than the background value
+and that the magnitudes of the fluctuations are roughly independent of the
+angular scales at which they are measured. This is in agreement with the
+predictions of inflationary models and has led to other scenarios being ruled
+out. An upper bound has also been placed
+on the amplitude of gravitational wave perturbations and bounds have been
+placed on the deviation of the fluctuations from a purely random gaussian
+distribution.
+
+Constraining the parameter space of inflationary models is an important step
+towards limiting the number of observationally viable models, and ultimately
+singling out one of these as the description of the physics of the early
+universe. In this work theoretical and numerical methods are used to constrain
+particular classes of inflationary models. In this chapter the foundations of
+for this investigation are laid. In Section~\ref{sec:frw-intro} the physics of
+an isotropic and homogeneous universe is reviewed. Then the inflationary
+scenario is introduced in Section~\ref{sec:inflation-intro}. Departures from
+gaussian statistics are parameterized in Section~\ref{sec:fnl-intro} and the
+current observational limits on inflationary models are outlined in
+Section~\ref{sec:obs-intro}. Finally the structure and goals of the full thesis
+are described in Section~\ref{sec:goals-intro}.
+
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -275,8 +315,8 @@ precedes, \eg $f_{,\varphi} = \dfrac{\d f}{\d \varphi}$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-In this section we introduce the inflationary scenario and briefly describe how
-it solves three major problems with the standard Big Bang picture. 
+The evolution of the universe as described above agrees remarkably well with
+observations. 
 
 \subsection{Problems with the Big Bang scenario}
 \label{sec:problems-intro}
