Added some outline. About to start Grainne's changes.

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.32 2009/08/30 14:42:11 ith Exp $
+% $Id: mainintro.tex,v 1.33 2009/08/30 15:20:08 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.32 2009/08/30 14:42:11 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.33 2009/08/30 15:20:08 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -315,11 +315,6 @@ precedes, \eg $f_{,\varphi} = \dfrac{\d f}{\d \varphi}$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-The evolution of the universe as described above agrees remarkably well with
-observations. 
-
-\subsection{Problems with the Big Bang scenario}
-\label{sec:problems-intro}
 Although remarkably successful in describing the evolution of the universe from
 very early in its history, the standard Big Bang scenario suffers from a number
 of serious problems. 
@@ -1300,9 +1295,31 @@ both at the 95\% confidence limit.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\begin{itemize}
- \item Main aims
- \item Chapter by chapter
- \item Description of two separate parts
-\end{itemize}
+The goal of this work is to constrain inflationary models in two very different
+ways; by deriving theoretical limits on their parameter space and demonstrating
+a numerical calculation which will allow the investigation of higher order
+perturbations. Both these methods have the potential to seriously limit the
+models investigated and possibly rule these scenarios out.
+
+In Part~\ref{part:dbi} of this work theoretical bounds are placed on a class of
+non-canonical inflationary models. These models illustrate the dynamics of
+extended objects called branes in superstring theory and are considered some of
+the most promising candidates for achieving inflation using string theory.
+Chapter~\ref{ch:dbi-intro} outlines the Dirac-Born-Infeld (DBI) scenario in
+terms of the string theoretic background and how it applies in four-dimensions
+as a realisation of inflation. In Chapter~\ref{ch:dbi} two bounds are derived
+for the standard DBI model which are incompatible for most of the known
+parameter space. A class of models which evade this bound are found in
+Chapter~\ref{ch:multibrane}. One particular model in this class is a
+multi-coincident brane scenario with a small finite number of branes.
+
+
+Part~\ref{part:numerical} applies numerical techniques to investigate the
+production of second order cosmological perturbations. In
+Chapter~\ref{ch:perts} the Klein-Gordon equation of the second order
+scalar field perturbation is described purely in terms of the field itself.
+This equation is the basis of the numerical calculation in
+Chapter~\ref{ch:numericalsystem} which is tested for two standard inflationary
+potentials. 
+
 
